--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.5",
     "hbs": "^4.0.4",
+    "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.3",
@@ -30,6 +31,7 @@
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "request": "^2.88.0",
+    "supertest": "^4.0.2",
     "validator": "^11.1.0",
     "yargs": "^13.2.4"
   }
